搭建Mybatis环境(一),未测试

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
 #classes file are ignored
-target/classes/*
-#it is a test to ignore txt file
-/target/*
-
 /target/
+/.settings
+/doc
+/reports
+/target
+.classpath
+.project
+/.idea
+
+.myhibernatedata
+hibernate.cfg.xml
+hibernate.reveng.xml
+
+/.metadata
+/RemoteSystemsTempFiles
+/Servers
+*.iml
+.DS_Store
+.tern-project
+/bak
