Spring集成Mybatis 及测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 jdbc.type=mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/fsj?useUnicode=true&characterEncoding=utf-8
-jdbc.username=fsj
+jdbc.username=root
 jdbc.password=48STX2X
 
 #connection pool settings
