--- a/src/main/resources/Log4j.properties
+++ b/src/main/resources/Log4j.properties
@@ -2,11 +2,12 @@
 #debug:show debug,info,error
 #info:show info,error
 #error:show error only
-log4j.rootLogger=debug,appender1  
+log4j.rootLogger=debug,appender1,appender2  
 #log4j.rootLogger=info,appender1
 #log4j.rootLogger=error,appender1  
  
 #append to console
+log4j.appender.appender2=org.apache.log4j.ConsoleAppender
 #log4j.appender.appender1=org.apache.log4j.FileAppender  
 log4j.appender.appender1=org.apache.log4j.DailyRollingFileAppender  
 
@@ -19,5 +20,7 @@ log4j.appender.appender1.File=E:/log/WEBDemo.log
 #setting outputfile style
 #log4j.appender.appender1.layout=org.apache.log4j.TTCCLayout
 log4j.appender.appender1.layout=org.apache.log4j.PatternLayout
+log4j.appender.appender2.layout=org.apache.log4j.PatternLayout
 log4j.appender.appender1.layout.ConversionPattern  = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+log4j.appender.appender2.layout.ConversionPattern  = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 #log4j.appender.appender1.layout=org.apache.log4j.HTMLLayout
