--- a/pom.xml
+++ b/pom.xml
@@ -280,7 +280,11 @@
 			<version>${tomcat.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		
+		<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>0.2.23</version>
+        </dependency>
 		<!-- JDBC driver -->
 		<dependency>
 			<groupId>${jdbc.driver.groupId}</groupId>
