--- a/pom.xml
+++ b/pom.xml
@@ -555,7 +555,28 @@
 			<version>${jackson.version}</version>
 		</dependency>
 		<!-- JSON end -->
-
+		<!-- jsonRPC For java -->
+		<dependency>
+			<groupId>com.github.briandilley.jsonrpc4j</groupId>
+			<artifactId>jsonrpc4j</artifactId>
+			<version>${jsonrpc4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>jsonrpc2-base</artifactId>
+			<version>1.38</version>
+		</dependency>
+		<dependency>
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>jsonrpc2-client</artifactId>
+			<version>1.16.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>jsonrpc2-server</artifactId>
+			<version>1.11</version>
+		</dependency>
+		<!-- jsonRPC For java end -->
 		<!-- XML begin -->
 		<dependency>
 			<groupId>dom4j</groupId>
