--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -121,7 +121,16 @@
 		<filter-name>sitemeshFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	  <servlet>
+	    <servlet-name>JsonRpcServerServlet</servlet-name>
+	    <servlet-class>com.service.jsonrequest.ServiceJsonRpcServlet</servlet-class>
+	    <load-on-startup>10</load-on-startup>
+	  </servlet>
+	
+	  <servlet-mapping>
+	    <servlet-name>JsonRpcServerServlet</servlet-name>
+	    <url-pattern>/json-Rpc</url-pattern>
+	  </servlet-mapping>
 	<!-- Spring MVC Servlet -->
 	<servlet>
 		<servlet-name>springDispatcher</servlet-name>
