--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -121,7 +121,7 @@
 		<filter-name>sitemeshFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	  <servlet>
+	  <!-- <servlet>
 	    <servlet-name>JsonRpcServerServlet</servlet-name>
 	    <servlet-class>com.proj.test.jsonrpc.ServiceJsonRpcServlet</servlet-class>
 	    <load-on-startup>10</load-on-startup>
@@ -130,7 +130,7 @@
 	  <servlet-mapping>
 	    <servlet-name>JsonRpcServerServlet</servlet-name>
 	    <url-pattern>/jsonrpc</url-pattern>
-	  </servlet-mapping>
+	  </servlet-mapping> -->
 	<!-- Spring MVC Servlet -->
 	<servlet>
 		<servlet-name>springDispatcher</servlet-name>
