--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,22 +12,46 @@
         <servlet-name>default</servlet-name>
         <url-pattern>*.jpg</url-pattern>
     </servlet-mapping>
+    
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.gif</url-pattern>
     </servlet-mapping>
+    
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.png</url-pattern>
     </servlet-mapping>
+    
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.js</url-pattern>
     </servlet-mapping>
+    
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.css</url-pattern>
     </servlet-mapping>
+
+	<!--dubbo services  -->
+	<context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:dubbo-demo-provider.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>com.alibaba.dubbo.remoting.http.servlet.BootstrapListener</listener-class>
+    </listener>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <servlet>
+        <servlet-name>dispatcher</servlet-name>
+        <servlet-class>com.alibaba.dubbo.remoting.http.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 
 	<!-- Spring ApplicationContext配置文件的路径,可使用通配符，用于后面的Spring Context Loader -->
 	<context-param>
@@ -63,36 +87,6 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-	<!-- 实现Hibernate的延迟加载功能，基于一个请求一个hibernate session的原则 -->
-	<!-- <filter>
-		<filter-name>openSessionInViewFilter</filter-name>
-		<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>openSessionInViewFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-		<dispatcher>REQUEST</dispatcher>
-		<dispatcher>FORWARD</dispatcher>
-	</filter-mapping> -->
-
-	<!-- Shiro Security filter -->
-	<!-- <filter>
-		<filter-name>shiroFilter</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-		<init-param>
-			<param-name>targetFilterLifecycle</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
-    <filter-mapping>
-        <filter-name>shiroFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-        <dispatcher>ERROR</dispatcher>
-    </filter-mapping> -->
-	
     <filter>
         <filter-name>httpMethodFilter</filter-name>
         <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
@@ -102,15 +96,6 @@
         <servlet-name>springDispatcher</servlet-name>
     </filter-mapping>
   
-	<!-- Cache Control Header filter -->
-	<!--TODO <filter>
-		<filter-name>cacheControlHeaderFilter</filter-name>
-		<filter-class>com.gospell.nms.common.web.CacheControlHeaderFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>cacheControlHeaderFilter</filter-name>
-		<url-pattern>/static/*</url-pattern>
-	</filter-mapping> -->
 
 	<!-- SiteMesh -->
 	<filter>
@@ -121,16 +106,6 @@
 		<filter-name>sitemeshFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	  <!-- <servlet>
-	    <servlet-name>JsonRpcServerServlet</servlet-name>
-	    <servlet-class>com.proj.test.jsonrpc.ServiceJsonRpcServlet</servlet-class>
-	    <load-on-startup>10</load-on-startup>
-	  </servlet>
-	
-	  <servlet-mapping>
-	    <servlet-name>JsonRpcServerServlet</servlet-name>
-	    <url-pattern>/jsonrpc</url-pattern>
-	  </servlet-mapping> -->
 	<!-- Spring MVC Servlet -->
 	<servlet>
 		<servlet-name>springDispatcher</servlet-name>
@@ -148,23 +123,13 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<!-- SOAP API,使用CXF实现 -->
-	<servlet>
-		<servlet-name>CXFServlet</servlet-name>
-		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>CXFServlet</servlet-name>
-		<url-pattern>/cxf/*</url-pattern>
-	</servlet-mapping>
-
-	<!-- JAX-RS REST -->
+	<!-- JAX-RS REST java api for restful web service-->
 	<servlet>
 		<servlet-name>JAX-RS REST Service</servlet-name>
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.gospell.nms.webservice.rest</param-value>
+			<param-value>com.proj.webservice.rest</param-value>
 		</init-param>
 		<init-param>
 			<param-name>jersey.config.server.provider.classnames</param-name>
