--- a/src/main/resources/Log4j.properties
+++ b/src/main/resources/Log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.appender2=org.apache.log4j.ConsoleAppender
 log4j.appender.appender1=org.apache.log4j.DailyRollingFileAppender  
 
 #1 set outputfile location
-log4j.appender.appender1.File=E:/log/WEBDemo.log
+log4j.appender.appender1.File=D:/record/log/WEBDemo.log
 
 #2 outputfile html
 #log4j.appender.appender1.File=E:/log/WEBDemo/sl4j.html
