--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ jdbc.pool.maxWait=60000
 jdbc.pool.timeBetweenEvictionRunsMillis=60000
 ###  配置一个连接在池中最小生存的时间，单位是毫秒，default value is 60000 (60 seconds)->3600000
 jdbc.pool.minEvictableIdleTimeMillis=300000
+
+
+#cache settings
+ehcache.configFile=cache/ehcache-local.xml
