--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ jdbc.type=mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/webdemo?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=48STX2X
+jdbc.password=root
 
 #connection pool settings
 jdbc.pool.initialSize=10
