忘记密码后的操作

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@
 jdbc.type=mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/webdemo?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
+jdbc.username=webdemo
+jdbc.password=webdemo
 
 #connection pool settings
 jdbc.pool.initialSize=10
