--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
 	<!-- 项目属性 -->
 	<properties>
 	<!-- 主要依赖库的版本定义 -->
-		<spring.version>4.2.4.RELEASE</spring.version>
+		<spring.version>4.3.1.RELEASE</spring.version>
 		<hibernate.version>4.3.11.Final</hibernate.version>
 		<hibernate-validator.version>5.2.1.Final</hibernate-validator.version>
-		<mybatis.version>3.3.0</mybatis.version>
-		<mybatis-spring.version>1.2.2</mybatis-spring.version>
+		<mybatis.version>3.4.1</mybatis.version>
+		<mybatis-spring.version>1.2.5</mybatis-spring.version>
 		<tomcat.version>7.0.63</tomcat.version>
 		<shiro.version>1.2.3</shiro.version>
 		<aspectj.version>1.8.0</aspectj.version>
@@ -49,6 +49,7 @@
 		<apache.netty>4.0.28.Final</apache.netty>
 		<dubbo.version>2.8.4</dubbo.version>
 		<rabbitmq.version>3.6.3</rabbitmq.version>
+		<paho-java-client.version>1.1.0</paho-java-client.version>
 		<!-- Plugin的属性定义 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.7</java.version>
@@ -162,6 +163,12 @@
 	  <artifactId>mqtt-client</artifactId>
 	  <version>1.14</version>
 	</dependency>
+	<dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>${paho-java-client.version}</version>
+        </dependency>
+	
 	<!-- SPRING basic begin(不需要显式定 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -213,6 +220,25 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		 <!-- Spring MQTT -->
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mqtt</artifactId>
+            <version>${spring.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.eclipse.paho</groupId>
+                    <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+		
 		<!-- Spring ORM -->
 		<dependency>
 			<groupId>org.springframework</groupId>
