--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<websocket.version>1.1</websocket.version>
 		<apache.netty>4.0.28.Final</apache.netty>
 		<dubbo.version>2.8.4</dubbo.version>
-		<rabbitmq.version>3.6.3</rabbitmq.version>
+		<rabbitmq.version>3.6.5</rabbitmq.version>
 		<paho-java-client.version>1.1.0</paho-java-client.version>
 		<!-- Plugin的属性定义 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -782,12 +782,11 @@
 		</dependency>
 		
 		<!-- RabbitMQ START-->
-		<!-- <dependency>
+		<dependency>
 		  <groupId>com.rabbitmq</groupId>
 		  <artifactId>amqp-client</artifactId>
 		  <version>${rabbitmq.version}</version>
-		</dependency> -->
-		
+		</dependency>
 		<!-- RabbitMQ END-->
 		<!-- TEST begin -->
 		<!-- junit -->
