--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
 		<jackson.version>2.5.4</jackson.version>
+		<faskjson.version>1.1.39</faskjson.version>
 		<xstream.version>1.4.7</xstream.version>
 		<guava.version>18.0</guava.version>
 		<joda-time.version>2.3</joda-time.version>
@@ -52,7 +53,7 @@
 		<paho-java-client.version>1.1.0</paho-java-client.version>
 		<!-- Plugin的属性定义 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 
 		<!-- JDBC属性 -->
 		<!-- MySQL -->
@@ -794,7 +795,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
-			<scope>test</scope>
+			<!--<scope>test</scope>-->
 			<exclusions>
 				<exclusion>
 					<groupId>*</groupId>
@@ -891,7 +892,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.1.39</version>
+            <version>${fastjson.version}</version>
         </dependency>
 
         <dependency>
@@ -1092,7 +1093,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <!--<encoding>${project.build.sourceEncoding}</encoding>-->
                     <archive>
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
