--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
         <jackson.version>2.5.4</jackson.version>
-        <faskjson.version>1.1.39</faskjson.version>
+        <fastjson.version>1.2.28</fastjson.version>
         <xstream.version>1.4.7</xstream.version>
         <guava.version>18.0</guava.version>
         <joda-time.version>2.3</joda-time.version>
@@ -912,6 +912,12 @@
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
             <version>3.4.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -1036,7 +1042,7 @@
         <dependency>
             <groupId>com.alibaba.otter</groupId>
             <artifactId>canal.client</artifactId>
-            <version>1.0.19</version>
+            <version>1.0.24</version>
         </dependency>
     </dependencies>
 
