--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
         <dubbo.version>2.8.4</dubbo.version>
         <rabbitmq.version>3.6.5</rabbitmq.version>
         <paho-java-client.version>1.1.0</paho-java-client.version>
+        <!-- 表达式执行引擎 -->
+        <aviator.version>4.0.0-RC</aviator.version>
         <!-- Plugin的属性定义 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
@@ -1043,6 +1045,12 @@
             <groupId>com.alibaba.otter</groupId>
             <artifactId>canal.client</artifactId>
             <version>1.0.24</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.aviator</groupId>
+            <artifactId>aviator</artifactId>
+            <version>${aviator.version}</version>
         </dependency>
     </dependencies>
 
